--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,24 @@
 version: '3.1'
 services:
+  cache:
+    image: "redis:alpine"
+    command: redis-server --loglevel warning --requirepass cache_pass
+    ports:
+      - "6379:6379"
+    volumes:
+      - $PWD/redis-data:/var/lib/redis
+      - $PWD/redis.conf:/usr/local/etc/redis/redis.conf
   web:
     build: .
     volumes:
       - ./:/go/src/github.com/laouji/fizz
+    depends_on:
+      - cache
     ports:
       - "5000:5000"
     command: reflex -r '\.go$$' -s -- sh -c 'make build && ./${COMPOSE_PROJECT_NAME}'
+    environment:
+      WEB_PORT: 5000
+      REDIS_HOST: cache
+      REDIS_PORT: 6379
+      REDIS_PASSWORD: cache_pass
